--- a/test.mdx
+++ b/test.mdx
@@ -23,3 +23,13 @@ A note[^1]
 
 * [ ] to do
 * [x] done
+
+
+## example
+
+Hello, world!
+Below is an example of markdown in JSX.
+
+<div style={{padding: '1rem', backgroundColor: 'violet'}}>
+  Try and change the background color to `tomato`.
+</div>
