--- a/test.mdx
+++ b/test.mdx
@@ -25,11 +25,10 @@ A note[^1]
 * [x] done
 
 
-## example
-
-Hello, world!
-Below is an example of markdown in JSX.
-
-<div style={{padding: '1rem', backgroundColor: 'violet'}}>
-  Try and change the background color to `tomato`.
-</div>
+```mermaid
+graph TD;
+    A-->B;
+    A-->C;
+    B-->D;
+    C-->D;
+```
